# CUDATorchStarter

./: README.md  test.py
.devcontainer/: devcontainer.json
CUDAExtension/: CMakeLists.txt  README.md  __init__.py  __init__.pyi  custom_extension.pyi  setup.py
CUDAExtension/include/: kernel_add.h
CUDAExtension/lib/: README.md
CUDAExtension/src/: binding.cpp  kernel_add.cu  main.cpp
CUDAExtension/tests/: CMakeLists.txt  test_kernel_add.cpp  test_main.cpp
Docker/: Dockerfile  docker-compose.yml  requirements.txt  start_interact.sh
PythonSrc/: test.py
